[package]
name = "playground"
version = "0.1.0"
edition = "2021"
authors = ["Ricardo Fuhrmann <fuhrmanns@gmail.com>"]

[[bin]]
name = "playground"
path = "src/main.rs"

[dependencies]
atomic_counter = { path = "../atomic_counter" }
bounded_channel = { path = "../bounded_channel" }
box_dyn_traits = { path = "../box_dyn_traits" }
trait_bounds = { path = "../trait_bounds" }
trait_enums = { path = "../trait_enums" }
relm4_cairo_visualizer = { path = "../relm4_cairo_visualizer" }
